# nomos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MONITORING_DESIGN.md  README.de.md  README.md  RELEASING.md  SECURITY.md  docker-compose.yml  schemas.json
.claude/: CLAUDE.md
.claude/agents/: console-dev.md  nomos-architect.md  nomos-backend.md  nomos-master.md  nomos-qa.md  nomos-security.md
.claude/knowledge/: LEARNINGS.md
.claude/rules/: 01-produkt-standalone.md  02-integration-first.md  03-agent-fuehrung.md  04-pdca-zyklus.md  05-refactor-quality-gate.md  06-integration-test-pflicht.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
_archive/console-v1/: package-lock.json  package.json  (+1 more)
caddy/: Caddyfile  Caddyfile.self-signed
config/: openclaw.json
docs/: INDEX.md  OPERATING-MODEL.md  QUALITY-SYSTEM.md  api-reference.md  architecture.md  cli-reference.md  compliance-guide.md  operations-runbook.md  quickstart.md  release-2026-05-20-external-index.md  release-2026-05-20-v0.3.0-external-index.md
nomos-api/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
nomos-api/alembic/: env.py
nomos-api/alembic/versions/: 001_initial_schema.py  002_monitoring_tables.py  003_agent_memory_importance_score.py  004_agents_missing_docs.py
nomos-api/nomos_api/: __init__.py  config.py  database.py  errors.py  main.py  models.py  schemas.py  vault_client.py  vault_source.py
nomos-api/nomos_api/auth/: jwt.py  middleware.py  password.py  rate_limiter.py  rbac.py  recovery.py  totp.py
nomos-api/nomos_api/middleware/: logging.py  metrics.py  request_id.py  security_headers.py
nomos-api/nomos_api/routers/: agents.py  approvals.py  audit.py  auth.py  budget.py  compliance.py  costs.py  dsgvo.py  fleet.py  health.py  incidents.py  monitoring.py  pii.py  proxy.py  settings.py  system.py  tasks.py  users.py  workspace.py
nomos-api/nomos_api/services/: agent_service.py  approval.py  audit.py  budget.py  config_revision.py  context_chunker.py  context_pipeline.py  context_summarizer.py  fleet_service.py  forget.py  heartbeat.py  honcho.py  incident.py  memory.py  metrics.py  metrics_buffer.py  pii.py  task_dispatch.py  workspace.py
nomos-api/nomos_api/worker/: __init__.py  main.py
nomos-api/nomos_api/worker/jobs/: __init__.py  alerts.py  approvals.py  audit_anchor.py  audit_retention.py  heartbeat.py  incidents.py  retention.py
nomos-api/tests/: conftest.py  test_agent_auth.py  test_agent_control.py  test_agents.py  test_alembic.py  test_approvals.py  test_approvals_db.py  test_audit.py  test_audit_anchor_and_retention.py  test_audit_entry.py  test_audit_merkle_phase_b1.py  test_auth_middleware.py  test_auth_router.py  test_budget.py  test_budget_db.py  test_budget_fail_closed.py  test_compliance.py  test_compliance_matrix.py  test_compose_host_ports.py  test_config_revision.py  test_config_revision_db.py  test_config_validation.py  test_context_chunker.py  test_context_pipeline.py  test_context_simple.py  test_context_summarizer.py  test_cookie_security.py  test_cors.py  test_costs_http.py  test_dsgvo_db.py  test_error_responses.py  test_fcl.py  test_fleet.py  test_forget.py  test_health.py  test_heartbeat.py  test_heartbeat_db.py  test_honcho_client.py  test_incidents_api.py  test_judgment_day_regressions.py  (+35 more)
nomos-cli/: README.md  pyproject.toml
nomos-cli/nomos/: cli.py  logging_config.py
nomos-cli/nomos/core/: api.py  compliance_engine.py  events.py  forge.py  gate.py  hash_chain.py  incident.py  manifest.py  manifest_validator.py  merkle.py  pii_filter.py  retention.py
nomos-cli/templates/compliance-red-teamer/: soul.md  test-suite.yaml
nomos-cli/tests/: conftest.py  test_cli.py  test_cli_v2.py  test_compliance_14docs.py  test_compliance_engine.py  test_events.py  test_events_v2.py  test_forge.py  test_gate.py  test_gate_v2.py  test_hash_chain.py  test_hash_chain_hmac_judgment_day.py  test_incident.py  test_logging_config.py  test_manifest.py  test_manifest_v2.py  test_merkle_edge_cases.py  test_pii_filter.py  test_retention.py  test_rico_template.py
nomos-console/: .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
nomos-gate/: Dockerfile  app.py
nomos-plugin/: Dockerfile.gateway  README.md  gateway-entrypoint.sh  openclaw.plugin.json  package-lock.json  package.json
schemas/: agent-manifest.yaml
scripts/: audit-router-coverage.py  check-contracts.ts  contract-naming-map.json  e2e-test.sh  export-schemas.py  gateway-entrypoint.sh  nomos-deploy.sh
vault/: init-entrypoint.sh  init.sh
(+224 files in other folders)
