[project]
name = "nomos-api"
version = "0.2.0"
description = "NomOS Fleet API — Agent Lifecycle Management"
requires-python = ">=3.11"
license = {text = "Fair Source"}
authors = [{name = "AI Engineering", email = "kontakt@ai-engineering.at"}]
# Upper bounds added 2026-05-19: prevent unattended breaking-major pulls on rebuild
# (bcrypt 5 / valkey 6 already broke builds — these cap the next major).
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "PyJWT>=2.8,<3",
    "bcrypt>=4.0,<6",
    "pyotp>=2.9,<3",
    "hvac>=2.1,<3",
    "mnemonic>=0.20,<1",
    "valkey>=6.0,<7",
    "alembic>=1.13,<2",
    "arq>=0.26,<1",
    # Phase-A1: Ed25519 audit-trail signatures used via shared
    # nomos.core.hash_chain (cryptography.hazmat.primitives.asymmetric.ed25519).
    "cryptography>=42.0,<49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.24,<2",
    "httpx>=0.27,<1",
    "aiosqlite>=0.20,<1",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nomos_api"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
