[project]
name = "nomos-cli"
version = "0.1.0"
description = "NomOS CLI — Agent Lifecycle Management"
requires-python = ">=3.11"
license = {text = "Fair Source"}
authors = [{name = "AI Engineering", email = "kontakt@ai-engineering.at"}]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nomos"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
