[project]
name = "nomos-cli"
version = "0.1.0"
description = "NomOS CLI — Agent Lifecycle Management"
requires-python = ">=3.11"
license = {text = "Fair Source"}
authors = [{name = "AI Engineering", email = "kontakt@ai-engineering.at"}]
# Upper bounds added 2026-05-19: prevent unattended breaking-major pulls on rebuild.
dependencies = [
    "click>=8.1,<9",
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "pyyaml>=6.0,<7",
    "rich>=13.0,<15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nomos"]

[project.scripts]
nomos = "nomos.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
